--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,24 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.63.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <modules>
         <module>cloud-server</module>
         <module>cloud-client</module>
+        <module>common-domain</module>
     </modules>
 
     <properties>
